--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
 	url = https://github.com/vim-scripts/The-NERD-tree.git
+[submodule ".vim/bundle/python-pep8-indend"]
+	path = .vim/bundle/python-pep8-indend
+	url = https://github.com/hynek/vim-python-pep8-indent.git
