--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/bundle/python-pep8-indend"]
 	path = .vim/bundle/python-pep8-indend
 	url = https://github.com/hynek/vim-python-pep8-indent.git
+[submodule ".vim/bundle/virtualenv"]
+	path = .vim/bundle/virtualenv
+	url = https://github.com/jmcantrell/vim-virtualenv.git
