--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    email = chmodas@gmail.com
-    name = Borislav Borisov
+	email = bborisov@protonmail.com
+	name = Borislav Borisov
 [color]
     ui = true
     grep = true
