--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+# 256 colour terminal
 set -g default-terminal "screen-256color"
 
+# Enable the dracula theme.
 run-shell './tmux-airline-dracula/airline-dracula.tmux'
