sort out vim's slow mode change in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 # 256 colour terminal
 set -g default-terminal "screen-256color"
 
+# Use a low value for the escape timeout
+set -sg escape-time 10
+
 # Enable the dracula theme.
 run-shell './tmux-airline-dracula/airline-dracula.tmux'
