--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,16 @@
 [submodule ".vim/bundle/pathogen"]
 	path = .vim/bundle/pathogen
-	url = git@github.com:tpope/vim-pathogen.git
+	url = https://github.com/tpope/vim-pathogen
 [submodule ".vim/bundle/acp"]
 	path = .vim/bundle/acp
-	url = git@github.com:vim-scripts/AutoComplPop.git
+	url = https://github.com/vim-scripts/AutoComplPop
   ignore = untracked
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
-	url = git@github.com:vim-scripts/The-NERD-tree.git
+	url = https://github.com/vim-scripts/The-NERD-tree
 [submodule ".vim/bundle/dracula-theme"]
 	path = .vim/bundle/dracula-theme
-	url = git@github.com:dracula/vim.git
+	url = https://github.com/dracula/vim
 [submodule "tmux-airline-dracula"]
 	path = tmux-airline-dracula
 	url = https://github.com/sei40kr/tmux-airline-dracula
