--- a/.i3/config
+++ b/.i3/config
@@ -159,6 +159,10 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+bindsym $mod+XF86AudioRaiseVolume exec amixer set Master 5%+ ; exec pkill -RTMIN+1 i3blocks
+bindsym $mod+XF86AudioLowerVolume exec amixer set Master 5%- ; exec pkill -RTMIN+1 i3blocks
+bindsym $mod+XF86AudioMute exec amixer -q set Master toggle ; exec pkill -RTMIN+1 i3blocks
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
