--- a/.i3blocks/config
+++ b/.i3blocks/config
@@ -1,8 +1,5 @@
 # i3blocks config file
 #
-# Please see man i3blocks for a complete reference!
-# The man page is also hosted at http://vivien.github.io/i3blocks
-#
 # List of valid properties:
 #
 # align
@@ -28,18 +25,6 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
-# Volume indicator
-#
-# The first parameter sets the step (and units to display)
-# The second parameter overrides the mixer selection
-# See the script for details.
-[volume]
-#label=VOL
-label=♪
-instance=Master
-#instance=PCM
-interval=once
-signal=1
 
 # Memory usage
 #
@@ -77,14 +62,9 @@ interval=10
 separator=false
 
 [wifi]
-label=:
+#label=:
 instance=wlp7s0
 interval=10
-separator=false
-
-#[bandwidth]
-#instance=eth0
-#interval=5
 
 # CPU usage
 #
@@ -109,6 +89,16 @@ label=:
 instance=0
 interval=30
 
+#
+# Volume indicator
+#
+[volume]
+label=♪
+instance=Master
+interval=once
+signal=1
+
+#
 # Date Time
 #
 [time]
