--- a/.i3/config
+++ b/.i3/config
@@ -163,6 +163,9 @@ bindsym $mod+XF86AudioRaiseVolume exec amixer set Master 5%+ ; exec pkill -RTMIN
 bindsym $mod+XF86AudioLowerVolume exec amixer set Master 5%- ; exec pkill -RTMIN+1 i3blocks
 bindsym $mod+XF86AudioMute exec amixer -q set Master toggle ; exec pkill -RTMIN+1 i3blocks
 
+# change the keyboard layout
+bindcode $mod+Shift+105 exec ~/.config/i3blocks/keyboard_layout -s ; exec pkill -RTMIN+10 i3blocks
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
