--- a/.i3/config
+++ b/.i3/config
@@ -36,7 +36,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec "rofi -modi combi,window -show combi -combi-modi run,drun,window"
+bindsym $mod+d exec "rofi -modi combi,window -show combi -combi-modi window,drun,run"
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -96,9 +96,11 @@ bindsym $mod+a focus parent
 # Workspaces assignments
 set $workspace1 "1: Terminals "
 set $workspace2 "2: Firefox "
+set $workspace0 "10: Random"
 
 assign [class="urxvt"] $workspace1
 assign [class="Firefox"] $workspace2
+assign [class="Chromium"] $workspace0
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -110,7 +112,7 @@ bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+0 workspace $workspace0
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $workspace1
@@ -122,7 +124,7 @@ bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+0 move container to workspace $workspace0
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
