--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "tmux-airline-dracula"]
 	path = tmux-airline-dracula
 	url = https://github.com/sei40kr/tmux-airline-dracula
+[submodule ".vim/bundle/plantuml-syntax"]
+	path = .vim/bundle/plantuml-syntax
+	url = https://github.com/aklt/plantuml-syntax
