--- a/.i3/config
+++ b/.i3/config
@@ -6,11 +6,11 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+#font pango:monospace 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 9
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -70,7 +70,7 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # Workspaces assignments
-set $workspace0 "0: Random"
+set $workspace0 "10: Ephemeral"
 set $workspace1 "1: Terminals "
 set $workspace2 "2: Firefox "
 set $workspace3 "3: Code "
@@ -81,7 +81,6 @@ assign [class="Firefox"] $workspace2
 assign [class="jetbrains-idea"] $workspace3
 
 # switch to workspace
-bindsym $mod+0 workspace $workspace0
 bindsym $mod+1 workspace $workspace1
 bindsym $mod+2 workspace $workspace2
 bindsym $mod+3 workspace $workspace3
@@ -91,9 +90,9 @@ bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace $workspace0
 
 # move focused container to workspace
-bindsym $mod+Shift+0 move container to workspace $workspace0
 bindsym $mod+Shift+1 move container to workspace $workspace1
 bindsym $mod+Shift+2 move container to workspace $workspace2
 bindsym $mod+Shift+3 move container to workspace $workspace3
@@ -103,6 +102,7 @@ bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace $workspace0
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -140,7 +140,7 @@ bindsym $mod+XF86AudioLowerVolume exec amixer set Master 5%- ; exec pkill -RTMIN
 bindsym $mod+XF86AudioMute exec amixer -q set Master toggle ; exec pkill -RTMIN+1 i3blocks
 
 # change the keyboard layout
-bindcode $mod+Shift+105 exec ~/.config/i3blocks/keyboard_layout -s ; exec pkill -RTMIN+10 i3blocks
+bindcode $mod+Shift+49 exec ~/.config/i3blocks/keyboard_layout -s ; exec pkill -RTMIN+10 i3blocks
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
